# SimpleSchema

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.toml  personas.toml  pyproject.toml
scripts/: analyze_results.py  build_1000_corpus.py  build_train.py  deploy_model.sh  download_hotpotqa.py  download_nq.py  run_oneshot.py  simple_baseline.py
src/: config.py  datasets.py  debate.py  engine.py  fitness.py  generator.py  judge.py  llm_client.py  logging.py  serialization.py  supervisor.py  tools.py  types.py  validator.py
tests/: ping_model.py  reason_model.py  test_engine.py  test_judge_quality.py  test_llm_client.py  test_schema.py
